--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/Users/tlinkin/.vim"]
-	path = /Users/tlinkin/.vim
+[submodule ".vim"]
+	path = .vim
 	url = https://github.com/carlhuda/janus.git
