--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,3 +86,6 @@ bind M \
   set -g mouse-select-pane off \;\
   set -g mouse-select-window off \;\
   display 'Mouse: OFF'
+
+bind v new-session
+bind b choose-tree -b "confirm-before -p \"kill-session '%%' (y/n)?\" \"kill-session -t '%1'\""
