--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim"]
 	path = .vim
 	url = https://github.com/carlhuda/janus.git
+[submodule ".janus/molokai"]
+	path = .janus/molokai
+	url = git@github.com:tomasr/molokai.git
