Add bundle config and yardoc

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".janus/molokai"]
 	path = .janus/molokai
 	url = git@github.com:tomasr/molokai.git
+[submodule ".janus/vim-yardoc"]
+	path = .janus/vim-yardoc
+	url = git@github.com:noprompt/vim-yardoc.git
