--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,5 +87,11 @@ bind M \
   set -g mouse-select-window off \;\
   display 'Mouse: OFF'
 
+# Session Management
+## Create New Session
 bind v new-session
+## Kill session from list
 bind b choose-tree -b "confirm-before -p \"kill-session '%%' (y/n)?\" \"kill-session -t '%1'\""
+
+# Powerline setup
+source '/Users/tlinkin/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
