--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,10 @@
 [core]
-	editor = /usr/bin/vim
+  editor = /usr/bin/vim
 [user]
-	name = Thomas Linkin
-	email = trlinkin@gmail.com
+  name = Thomas Linkin
+  email = trlinkin@gmail.com
 [color]
-	ui = true
+  ui = true
+[alias]
+  # See http://cat.pdx.edu/~hunner/git-lg.png for an example
+  lg = "log     --pretty=format:'%C(yellow)%h%C(reset) %C(blue)%an%C(reset) %C(cyan)%cr%C(reset) %s %C(green)%d%C(reset)' --graph --date-order"
