--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,4 +94,4 @@ bind v new-session
 bind b choose-tree -b "confirm-before -p \"kill-session '%%' (y/n)?\" \"kill-session -t '%1'\""
 
 # Powerline setup
-source '/Users/tlinkin/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
+#source '/Users/tlinkin/Library/Python/3.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
