--- a/.gitconfig
+++ b/.gitconfig
@@ -8,3 +8,4 @@
 [alias]
   # See http://cat.pdx.edu/~hunner/git-lg.png for an example
   lg = "log     --pretty=format:'%C(yellow)%h%C(reset) %C(blue)%an%C(reset) %C(cyan)%cr%C(reset) %s %C(green)%d%C(reset)' --graph --date-order"
+  fa = "fetch --all"
