--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,6 @@
 [core]
   editor = /usr/bin/vim
+  excludesfile = /opt/boxen/config/git/gitignore
 [user]
   name = Thomas Linkin
   email = trlinkin@gmail.com
@@ -9,3 +10,9 @@
   # See http://cat.pdx.edu/~hunner/git-lg.png for an example
   lg = "log     --pretty=format:'%C(yellow)%h%C(reset) %C(blue)%an%C(reset) %C(cyan)%cr%C(reset) %s %C(green)%d%C(reset)' --graph --date-order"
   fa = "fetch --all"
+
+[hub]
+protocol = https
+
+[credential]
+helper = /opt/boxen/bin/boxen-git-credential
